Fix <sup> misalignment

--- a/app.css
+++ b/app.css
@@ -25,7 +25,7 @@ time, mark, audio, video {
 }
 
 sup {
-  top: -0.5em;
+  top: -0.3em;
   font-size: 85%!important;
 }
 
